--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,6 +15,8 @@ dependencies:
   cupertino_icons: ^1.0.2
   smooth_page_indicator:
   slide_to_act:
+  syncfusion_flutter_charts:
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
